<?xml version="1.0"?>
<package>
  <name>crazyflie_comm</name>
  <version>0.0.1</version>
  <description>CPP interface for Crazyflie Nano Quadcopter from Bitcraze including SITL/HITL support</description>

  <maintainer email="frmbouwe@gmail.com">Franck Djeumou</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/wuwushrek/crazyflie_cpp.git</url>
  <url type="bugtracker">https://github.com/whoenig/crazyflie_ros/issues</url>

  <author email="frmbouwe@gmail.com">Franck Djeumou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <run_depend>libusb-1.0-dev</run_depend>
</package>
